# Jellyfin.Ollama.Chat

./: .env.example  .gitignore  =1.4.0  CLAUDE.md  GPU_README.md  HANDOFF.md  PLUGIN_NAMING_AUDIT.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  SECURITY.md  TESTING_STRATEGY.md  audit_findings_stage_9.md  build.ps1  build.sh  chat_rag_project.md  check_services.ps1  debug_concept_expander.py  debug_mongodb_jellyfin.py  debug_movie_extraction.py  debug_movie_search.py  debug_ollama_connection.py  debug_pattern_issues.py  debug_spacy_temporal.py  debug_worker.py  dev_setup.ps1  dev_setup.sh  docker-compose.dev.yml  fix1.ps1  hardware_config.json  learn_prompt.txt  manage.py  metrics.txt  minimal_test.py  pyproject.toml  reset_mongodb.py  resource_aware_queue_design.md  run_all_tests.ps1  security_check_prompt.txt  semantic_chunking_movie_config_example.yaml  (+71 more)
.claude/tasks/: todo.md
app/: README.md  demo.py  launch.py  main.py  test_app.py
cli/: README.md  conceptnet_keyword_endpoint_test.py  gensim_similarity_endpoint_test.py  heideltime_temporal_endpoint_test.py  llm_keyword_endpoint_test.py  llm_question_answer_endpoint_test.py  llm_semantic_chunking_endpoint_test.py  llm_temporal_intelligence_endpoint_test.py  llm_websearch_endpoint_test.py  merge_keywords_endpoint_test.py  plugin_test_template.py  spacy_temporal_endpoint_test.py  sutime_temporal_endpoint_test.py
config/hardware/: default.yaml
config/media_types/: book.yaml  media_detection.yaml  movie.yaml  movie_new_format.md  movie_new_format.yaml  music.yaml  podcast.yaml  tv_show.yaml
config/plugins/: AdaptiveQueryExpanderPlugin.yml  service_endpoints.yml
docker/: wait_for_services.sh
docker/api/: Dockerfile  Dockerfile.dev  entrypoint.sh  healthcheck.sh
docker/faiss/: Dockerfile
docker/faiss_ingestor/: Dockerfile  entrypoint.sh  healthcheck.sh
docker/faiss_service/: Dockerfile  entrypoint.sh  healthcheck.sh
docker/gpu_queue_worker/: Dockerfile  entrypoint.sh  healthcheck.sh  main.py
docker/ingestor/: Dockerfile.dev  entrypoint.sh
docker/monitoring/: prometheus.yml
docker/ollama/: entrypoint.sh  healthcheck.sh
docker/ollama_chat/: entrypoint.sh  healthcheck.sh
docker/ollama_embed/: entrypoint.sh  healthcheck.sh
docker/redis/: Dockerfile  redis.conf
docker/redis_queue_worker/: Dockerfile  entrypoint.sh  healthcheck.sh  main.py
docker/scripts/: entrypoint.sh
docker/searxng/: Dockerfile  settings.yml
docker/services/: Dockerfile.conceptnet  Dockerfile.gensim  Dockerfile.heideltime  Dockerfile.llm  Dockerfile.model_manager  Dockerfile.nlp  Dockerfile.router  Dockerfile.spacy
docker/vectordb/: Dockerfile  healthcheck.sh
docker/web/: Dockerfile.dev  entrypoint.sh
docker/worker/: Dockerfile  Dockerfile.dev  Dockerfile.multistage  entrypoint.sh
docs/: parallel_queue_implementation.md
scripts/: cli_send.py  dev.py
src/: config.py  ingestion_manager.py
src/api/: __init__.py  bootstrap.py  cache_admin.py  entrypoint.py  faiss_client.py  healthcheck.py  load_query_embellishers.py  main.py  plugin_loader.py  plugin_metrics.py  plugin_registry.py  plugin_watcher.py  safe_restart.py  server.py
src/concept_expansion/: __init__.py  concept_expander.py  temporal_concept_generator.py  test_concept_expander.py  test_llm_provider.py  test_new_providers.py
src/data/: cache_manager.py  field_expansion_cache.py  sample_entries.py  test_cache.py  test_generic_cache.py
src/faiss_ingestor/: entrypoint.py  healthcheck.py  ingestion_worker.py  main.py
src/faiss_service/: entrypoint.py  faiss_index.py  faiss_server.py  healthcheck.py  main.py  worker.py
src/gpu_queue_worker/: entrypoint.py  gpu_worker.py  main.py
src/ingestion/: __init__.py  jellyfin_connector.py
src/ingestor/: main.py
src/ollama_service/: chat_client.py  embedding_client.py  ingestion_worker.py
src/plugins/: base.py  base_concept.py  concept_expansion_plugin.py  config.py  embed_data_embellisher_starter.py  endpoint_config.py  faiss_crud_plugin_starter.py  http_base.py  http_provider_plugin.py  mongo_manager.py  query_embellisher_starter.py  question_expansion_plugin.py  remote_concept_expansion_plugin.py  remote_temporal_analysis_plugin.py  sample_query_embellisher.py  (+3 more)
tasks/: issue.md  issue_001.md  issue_001b.md  mermaid.md  todo.issue_001.md  todo.issue_001.md.backup  todo.md
tests/: __init__.py  test_chat.py  test_ingest.py  test_ingest_and_query.py  tests_shared.py
worker/: main.py
(+214 files in other folders)
